--- a/index.html
+++ b/index.html
@@ -1,1 +1,175 @@
-HOLA
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>LLIKA – Corruption Web Detective</title>
+  <style>
+    :root {
+      --bg-color: #3f3f42;
+      --line-color: rgba(255,255,255,0.15);
+      --text-color: #f2f2f2;
+      --accent: #ff3b3b;
+    }
+
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      font-family: "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+    }
+
+    body {
+      min-height: 100vh;
+      color: var(--text-color);
+      background-color: var(--bg-color);
+      background-image: url('img/fondo.jpeg');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+    }
+
+    .page {
+      display: grid;
+      grid-template-columns: 1fr 320px;
+      gap: 2rem;
+      padding: 3rem 4rem;
+      align-items: center;
+    }
+
+    @media (max-width: 900px) {
+      .page {
+        grid-template-columns: 1fr;
+        padding: 2rem;
+      }
+    }
+
+    .main {
+      text-align: center;
+    }
+
+    h1 {
+      font-size: clamp(2.5rem, 5vw, 4rem);
+      letter-spacing: 0.2rem;
+      margin-bottom: 1.5rem;
+    }
+
+    .subtitle {
+      font-size: clamp(1.1rem, 2.5vw, 1.6rem);
+      opacity: 0.9;
+      margin-top: 1.5rem;
+    }
+
+    .svg-wrapper {
+      max-width: 720px;
+      margin: 0 auto;
+    }
+
+    .svg-wrapper svg {
+      width: 100%;
+      height: auto;
+    }
+
+    .authors {
+      margin-top: 3rem;
+      display: flex;
+      justify-content: space-around;
+      gap: 1.5rem;
+      flex-wrap: wrap;
+      font-size: 0.9rem;
+      opacity: 0.85;
+    }
+
+    .authors span {
+      display: block;
+      font-size: 0.8rem;
+      opacity: 0.75;
+    }
+
+    .side {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 1.5rem;
+    }
+
+    .qr-box {
+      width: 220px;
+      height: 220px;
+      border: 2px dashed rgba(255,255,255,0.5);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      font-size: 0.85rem;
+      opacity: 0.8;
+    }
+
+    .btn {
+      width: 100%;
+      padding: 0.8rem 1rem;
+      border-radius: 8px;
+      border: none;
+      cursor: pointer;
+      font-size: 1rem;
+      font-weight: 600;
+    }
+
+    .btn-primary {
+      background: var(--accent);
+      color: white;
+    }
+
+    .btn-secondary {
+      background: transparent;
+      border: 1px solid rgba(255,255,255,0.5);
+      color: white;
+    }
+
+    .btn:hover {
+      opacity: 0.9;
+    }
+  </style>
+</head>
+<body>
+  <div class="page">
+
+    <!-- MAIN CONTENT -->
+    <section class="main">
+      <h1 style="margin-bottom: 0;">LLIKA</h1>
+
+      <!-- SVG PLACEHOLDER -->
+      <div class="svg-wrapper">
+        <img src="img/logo.png" alt="LLIKA logo" style="width:80%; height:auto;" />
+      </div>
+
+      <div class="subtitle">Corruption Web Detective</div>
+
+      <div class="authors">
+        <div>
+          Pedro Casaverde
+          <span>pedro.casaverde@utec.edu.pe</span>
+        </div>
+        <div>
+          Sherlyn Salazar
+          <span>sherlyn.salazar@utec.edu.pe</span>
+        </div>
+        <div>
+          Gian Carlo Quiroz
+          <span>gian.quiroz@utec.edu.pe</span>
+        </div>
+      </div>
+    </section>
+
+    <!-- SIDE CONTENT -->
+    <aside class="side">
+      <div class="qr-box">
+        <img src="img/QR.png" alt="QR" style="width:80%; height:auto;" />
+      </div>
+      <button class="btn btn-primary">Botón 1</button>
+      <button class="btn btn-secondary">Botón 2</button>
+    </aside>
+
+  </div>
+</body>
+</html>
