[UTEC] Cambios mapa

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>LLIKA – Corruption Web Detective</title>
+  <title>LLIKA</title>
 
   <style>
     :root {
@@ -173,8 +173,8 @@
           <span>pedro.casaverde@utec.edu.pe</span>
         </div>
         <div>
-          Sherlyn Salazar
-          <span>sherlyn.salazar@utec.edu.pe</span>
+          Sherly Salazar
+          <span>sherly.salazar@utec.edu.pe</span>
         </div>
         <div>
           Gian Carlo Quiroz
@@ -189,11 +189,11 @@
         <img src="img/QR.png" alt="QR" style="width:80%; height:auto;" />
       </div>
 
-      <button class="btn" onclick="location.href='empresas.html'">
+      <button class="btn" onclick="location.href='mapa_empresas.html'">
         <span>🏢</span> Grafo de Empresas
       </button>
 
-      <button class="btn" onclick="location.href='personas.html'">
+      <button class="btn" onclick="location.href='mapa_personas.html'">
         <span>👤</span> Grafo de Personas
       </button>
     </aside>
