--- a/grafos/cusco/empresas.html
+++ b/grafos/cusco/empresas.html
@@ -1,5 +1,7 @@
 <html>
     <head>
+        <title>LLIKA</title>
+  <link rel="icon" href="../../img/favicon.ico" type="image/x-icon">
         <meta charset="utf-8">
         
             <script src="lib/bindings/utils.js"></script>
