--- a/mapa_personas.html
+++ b/mapa_personas.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>LLIKA</title>
+  <link rel="icon" href="img/favicon.ico" type="image/x-icon">
 
   <style>
     body {
