--- a/mapa_empresas.html
+++ b/mapa_empresas.html
@@ -9,6 +9,10 @@
   <style>
     body {
       background-image: url('img/fondo.jpeg');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
       color: white;
       font-family: Arial, sans-serif;
       text-align: center;
@@ -39,6 +43,8 @@
       box-shadow:
         0 0 15px rgba(144, 255, 190, 0.6),
         inset 0 0 10px rgba(0, 255, 106, 0.3);
+      margin: 20px;
+      min-height: 80vh; 
     }
 
     h2 {
@@ -121,7 +127,8 @@
   <div class="map-container">
 
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 800 550"
-      style="display:block; margin:0 auto; width:100%; max-width:800px;">
+      style="display:block; margin:0 auto; width:100%;">
+      
       <path
         d="M 399.4182 410.5638 L 396.8974 408.7023 L 397.4016 407.6163 L 395.2685 406.1685 L 395.7727 405.186 L 393.0967 403.7381 L 391.0025 400.3253 L 388.9082 397.688 L 382.4703 394.0166 L 380.4536 392.2068 L 380.3761 390.6038 L 379.3289 387.8632 L 375.6834 384.7606 L 376.4978 384.2435 L 375.567 382.3819 L 373.3177 380.6238 L 372.8523 381.8131 L 372.3869 379.0208 L 372.6971 375.8665 L 370.0987 375.0391 L 370.7968 372.557 L 372.2705 372.4019 L 373.0462 373.9532 L 374.8302 366.507 L 373.9382 362.2667 L 373.3177 361.4394 L 375.7222 358.2851 L 378.9411 355.5962 L 380.1046 353.9415 L 381.9274 354.7171 L 385.5729 354.3551 L 387.0854 353.5795 L 386.9691 354.9239 L 385.3014 356.5269 L 385.5341 359.009 L 384.4094 359.9915 L 383.3623 362.9907 L 386.2322 363.4044 L 390.4595 364.8005 L 389.0246 367.4895 L 389.7614 369.6096 L 388.7143 371.3677 L 389.6063 374.8323 L 393.4458 376.3318 L 396.5483 378.9691 L 398.4487 379.2793 L 399.7285 380.5204 L 399.8449 383.2093 L 398.2548 386.467 L 400.1163 388.7939 L 400 391.276 L 401.4349 391.3277 L 403.4128 390.0867 L 404.5763 392.5688 L 406.244 394.1718 L 406.6706 396.2919 L 407.9892 398.4637 L 407.2135 402.4971 L 401.9779 405.9616 L 399.4182 410.5638 Z"
         fill="#000" fill-opacity="1" stroke="#000" stroke-width="0" paint-order="fill" stroke-opacity="1"
@@ -436,8 +443,7 @@
         stroke="#ccc" stroke-width="0" paint-order="fill" stroke-opacity="1" stroke-dasharray="" stroke-linecap="butt"
         stroke-linejoin="miter" stroke-miterlimit="10" transform="matrix(1,0,0,1,5,514)" clip-path="none" />
       <text transform="matrix(1,0,0,1,5,514)" fill="#333" fill-opacity="1" stroke="none" clip-path="none"
-        style="font: 12px &quot;Microsoft YaHei&quot;;">
-        <tspan dominant-baseline="middle" text-anchor="start" x="30" y="7">0 - 5000</tspan>
+        style="font: 12px &quot;Microsoft YaHei&quot;;">        
       </text>
       <path d="M -5 -5 L 5 -5 L 5 5 L -5 5 L -5 -5 Z" fill="none" fill-opacity="1" stroke="#ccc" stroke-width="0"
         paint-order="fill" stroke-opacity="1" stroke-dasharray="" stroke-linecap="butt" stroke-linejoin="miter"
