--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     }
 
     .subtitle {
-      font-size: 1.4rem;
+      font-size: 3vw;
       opacity: 0.85;
       margin-top: 1rem;
     }
@@ -65,18 +65,18 @@
     }
 
     .authors {
-      margin-top: 3rem;
+      margin-top: 1.5vw;
       display: flex;
       justify-content: space-around;
       flex-wrap: wrap;
       gap: 1.5rem;
-      font-size: 0.9rem;
+      font-size: 2vw;
       opacity: 0.8;
     }
 
     .authors span {
       display: block;
-      font-size: 0.8rem;
+      font-size: 1.5vw;
       opacity: 0.6;
     }
 
@@ -88,8 +88,8 @@
     }
 
     .qr-box {
-      width: 220px;
-      height: 220px;
+      width: 15vw;
+      height: 15vw;
       border: 2px dashed rgba(0,255,156,0.5);
       display: flex;
       align-items: center;
@@ -149,7 +149,7 @@
       font-size: 1.4rem;
       margin-right: 0.5rem;
     }
-
+    
   </style>
 </head>
 
@@ -160,7 +160,7 @@
       <h1>LLIKA</h1>
 
       <div class="svg-wrapper">
-        <img src="img/logo.png" alt="LLIKA logo" style="width:80%; height:auto;" />
+        <img src="img/logo.png" alt="LLIKA logo" style="width:35vw; height:auto;" />
       </div>
 
       <div class="subtitle">Corruption Web Detective</div>
